...

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <in.koreatech.koin.core.appbar.AppBarBase
            android:id="@+id/koin_base_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:leftButtonBackground="@drawable/ic_back_arrow"
            app:titleText="상점" />

    </LinearLayout>
...
                    app:layout_constraintLeft_toRightOf="@id/store_category_sweet_dosirak"
                    app:layout_constraintRight_toRightOf="@+id/guideline_vertical_0.953"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />


                <TextView
                    android:id="@+id/store_category_chicken_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:letterSpacing="-0.02"
...
                    app:fontName="Custom6"
                    app:layout_constraintEnd_toEndOf="@id/store_category_chicken"
                    app:layout_constraintStart_toStartOf="@+id/store_category_chicken"
                    app:layout_constraintTop_toBottomOf="@+id/store_category_chicken" />

                <TextView
                    android:id="@+id/store_category_pizza_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:letterSpacing="-0.02"
...
                    app:fontName="Custom6"
                    app:layout_constraintEnd_toEndOf="@+id/store_category_pizza"
                    app:layout_constraintStart_toStartOf="@+id/store_category_pizza"
                    app:layout_constraintTop_toBottomOf="@+id/store_category_pizza" />

                <TextView
                    android:id="@+id/store_category_sweet_pork_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:letterSpacing="-0.02"
...
                    app:fontName="Custom6"
                    app:layout_constraintEnd_toEndOf="@+id/store_category_sweet_pork"
                    app:layout_constraintStart_toStartOf="@+id/store_category_sweet_pork"
                    app:layout_constraintTop_toBottomOf="@+id/store_category_sweet_pork" />

                <TextView
                    android:id="@+id/store_category_dosirak_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:letterSpacing="-0.02"
...
                    app:fontName="Custom6"
                    app:layout_constraintEnd_toEndOf="@+id/store_category_sweet_dosirak"
                    app:layout_constraintStart_toStartOf="@+id/store_category_sweet_dosirak"
                    app:layout_constraintTop_toBottomOf="@+id/store_category_sweet_dosirak" />

                <TextView
                    android:id="@+id/store_category_sweet_pork_feet_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:letterSpacing="-0.02"
...
                    app:layout_constraintLeft_toRightOf="@id/store_category_hair"
                    app:layout_constraintRight_toLeftOf="@+id/guideline_vertical_0.861"
                    app:layout_constraintTop_toBottomOf="@+id/store_category_chicken_textview" />


                <TextView
                    android:id="@+id/store_category_chinese_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:letterSpacing="-0.02"
...
                    app:layout_constraintEnd_toEndOf="@+id/store_category_chinese"
                    app:layout_constraintStart_toStartOf="@+id/store_category_chinese"
                    app:layout_constraintTop_toBottomOf="@+id/store_category_chinese" />


                <TextView
                    android:id="@+id/store_category_normal_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:letterSpacing="-0.02"
...
                    app:layout_constraintEnd_toEndOf="@+id/store_category_normal"
                    app:layout_constraintStart_toStartOf="@+id/store_category_normal"
                    app:layout_constraintTop_toBottomOf="@+id/store_category_normal" />


                <TextView
                    android:id="@+id/store_category_hair_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:letterSpacing="-0.02"
...
                    app:layout_constraintEnd_toEndOf="@+id/store_category_hair"
                    app:layout_constraintStart_toStartOf="@+id/store_category_hair"
                    app:layout_constraintTop_toBottomOf="@+id/store_category_hair" />


                <TextView
                    android:id="@+id/store_category_etc_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:letterSpacing="-0.02"
...
