<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navi_item_home"
        android:title="@string/home" />

    <item
        android:id="@+id/navi_item_search"
        android:title="@string/navigation_item_search" />

    <item android:title="학교 정보">
        <menu>
            <item
                android:id="@+id/navi_item_store"
                android:title="@string/navigation_item_store" />
            <item
                android:id="@+id/navi_item_dining"
                android:title="@string/navigation_item_dining" />
        </menu>
    </item>
</menu>