...
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/category_constraint_layout"
                            tools:listitem="@layout/store_event_card" />
-->
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/store_recyclerview"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="18dp"
                            android:layout_marginTop="12dp"
                            android:background="@color/background"
                            android:clipToPadding="false"
...
